# andor-api

./: Cargo.toml  NOTES.md  README.md  docker-compose.yml  spin.toml  test.hurl
api/episodes/: Cargo.toml
api/episodes/src/: db.rs  handlers.rs  lib.rs  models.rs
api/not-found/: Cargo.toml
api/not-found/src/: lib.rs
api/people/: Cargo.toml
api/people/src/: api.rs  db.rs  lib.rs  models.rs  queries.rs  response.rs  util.rs
api/search/: Cargo.toml
api/search/src/: db.rs  episode.rs  fetch.rs  lib.rs  models.rs  query.rs  response.rs  router.rs  store.rs  vespa.rs
api/vespa/: Cargo.toml
api/vespa/src/: lib.rs
cli/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: records.rs
crates/db-adapter/src/: lib.rs
crates/db_adapter/: Cargo.toml
crates/rest-api/: Cargo.toml
crates/rest_api/: Cargo.toml
crates/vespa/: Cargo.toml
data/: andor-episodes.csv  andor-people-test.csv  andor-people.csv  andor-planets.csv  slow-horses-episodes.csv  slow-horses-people.csv
db/: init.sql
episode-api/: Cargo.toml
episode-api/src/: lib.rs
not-found/: Cargo.toml
people-api/: .gitignore  Cargo.toml
people-api/src/: api.rs  lib.rs  models.rs  util.rs
ui/nextjs/: package-lock.json  package.json
ui/solid/: package-lock.json  package.json  vite.config.ts
ui/vite/: index.html  package-lock.json  package.json
ui/vite/src/: app.tsx  (+2 more)
vespa/: services.xml  validation-overrides.xml
vespa/data/: 01-kassa.json  02-that-would-be-me.json  03-reckoning.json  04-aldhani.json  05-the-axe-forgets.json  06-the-eye.json  07-announcement.json  08-narkina-5.json  09-nobody-is-listening.json  10-one-way-out.json  11-daughter-of-ferrix.json  12-rix-road.json
vespa/schemas/: episodes.sd  people.sd
(+81 files in other folders)
