[package]
name = "people-api"
authors = ["Keith Bingman <keith@keithbingman.com>"]
description = "People API"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
serde = {version = "1", features=["derive"]}
serde_json = "1"
spin-sdk = { path = "../../spin/sdk/rust" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

