[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
csv = "1.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["rt", "macros", "rt-multi-thread"] }
tokio-postgres = "0.7.7"
